tests/negative/test_expr_deref_ptr_cn.orb
fnc main() () {
    let x:i32;
    let p:(ptr cn) (ptr &x);
    * p;
};